--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -82,7 +82,7 @@
 	
 
 	<footer class="container-fluid text-center fixed-bottom"
-		style="background-color: #4EB918">
+		style="background-color: #b4ff33">
 		<div class="row">
 			<div class="col-4 p-3">
 				<p>
