--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -57,7 +57,7 @@
 							tabindex="-1" aria-disabled="true">Rewards</a>
 						</li>
 						<li class="nav-item"><a class="nav-link active" href="#"
-							tabindex="-1" aria-disabled="true">Sign Up</a>
+							tabindex="-1" aria-disabled="true">Sign In</a>
 						</li>
 						<li class="nav-item"><a class="nav-link active" href="#"
 							tabindex="-1" aria-disabled="true">Log In</a>
