--- a/src/main/resources/templates/coupons/list.html
+++ b/src/main/resources/templates/coupons/list.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head">
-	<title>HR - Regions </title>
+<head th:replace="layout/layout :: head(~{::title})">
+	<title>Rewards </title>
 </head>
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
 		<div class="container">
 			<div class="row">
-			  <div class="col-4 p-2" th:each="category : ${categories}">
+			  <div class="col-4 p-2" th:each="coupon : ${coupons}">
 				  <div>
 					<img src="images/cupon.jpg"  class="img-fluid img-thumbnail" alt="">
 				  </div>
-				  <h5 class=" d-flex justify-content-center m-3" th:text="${category.name}"></h5>
+				  <h5 class=" d-flex justify-content-center m-3" th:text="${coupon.nameCoupon}"></h5>
 				  <div class="d-flex justify-content-center">
-					<button type="button" class="btn btn-success d-block">view</button>
+					<a th:href="@{'/rewards/' + ${coupon.id} + '/view'}" type="button" class="btn btn-success d-block">view</a>
 				  </div>
 			</div>
 		</div>
