--- a/src/main/resources/templates/coupons/list.html
+++ b/src/main/resources/templates/coupons/list.html
@@ -6,16 +6,17 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
-		<div class="container">
-			<div class="row">
-			  <div class="col-4 p-2" th:each="coupon : ${coupons}">
-				  <div>
-					<img src="images/cupon.jpg"  class="img-fluid img-thumbnail" alt="">
+		<div class="container p-3">
+			<div class="row m-2 p-1  d-flex justify-content-center">
+			  <div class="col-3 m-1 p-1" th:each="coupon : ${coupons}">
+				  <div class="d-flex justify-content-center p-2">
+					<img th:src="${coupon.image}" class="img-fluid img-thumbnail" alt="">
 				  </div>
-				  <h5 class=" d-flex justify-content-center m-3" th:text="${coupon.nameCoupon}"></h5>
-				  <div class="d-flex justify-content-center">
-					<a th:href="@{'/rewards/' + ${coupon.id} + '/view'}" type="button" class="btn btn-success d-block">view</a>
+				  <h5 class="d-flex justify-content-center m-3" th:text="${coupon.nameCoupon}"></h5>
+				  <div class="d-flex justify-content-center m-3">
+					<a th:href="@{'/rewards/' + ${coupon.id}}" class="btn btn-success d-block">view</a>
 				  </div>
+				 </div>
 			</div>
 		</div>
 	</main>
