--- a/src/main/resources/templates/recycle/register.html
+++ b/src/main/resources/templates/recycle/register.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head">
+<head th:replace="layout/layout :: head(~{::title})">
 	<title>Recycle </title>
 </head>
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
-		<div class="d-flex justify-content-center m-3">
-			<div class="card m-3 " style="width: 60%">
-				<div class="card-header bg-success text-white">Register your waste</div>
-				<div class="card-body m-3">
-					<div class="container">
-						<div class="row">
-						  <div class="col-4">
-							  <div class="m-3"><p>Name</p></div>
-							  <div class="m-3"><p>Category</p></div>
-							  <div class="m-3"><p>Price/kilo</p></div>
-								
-						  </div>
-						  <div class="col-8">
-							<div class="col-sm-10 m-2"><input type="password" class="form-control" id="inputPassword"></div>
-							<input class="form-control m-2" list="datalistOptions" id="exampleDataList" placeholder="select category">
-								<datalist id="datalistOptions">
-									<option th:each="category : ${categories}"
-									th:value="${category.name}">
-								</datalist>
-								<p class="m-2">1.00</p>
-							</div>
-						</div>
-					  </div>
-					  <div class="d-flex justify-content-center m-2">
-						<button type="button" class="btn btn-success">Success</button>
+		<div class="container p-2">
+			<div class="row">
+			  <div class="col-3" th:each="waste : ${wastes}">
+				<div class="card" style="width: 18rem;">
+					<img th:src="${waste.image}" class="img-fluid" >
+					<div class="card-body">
+					  <h5 class="card-title text-center" th:text="${waste.name}"></h5>
+					 
+					 <div class="button  d-flex justify-content-center ">
+						<a href="#" class="btn btn-primary bg-success">Add</a>
+					 </div> 
+					  
 					</div>
 				</div>
 			  </div>
+			  
+			</div>	
 		</div>
 
 		<div class="d-flex justify-content-center m-3">
