Lógica de Recycle (primera parte)

--- a/src/main/resources/templates/coupons/list.html
+++ b/src/main/resources/templates/coupons/list.html
@@ -14,7 +14,7 @@
 				  </div>
 				  <h5 class="d-flex justify-content-center m-3" th:text="${coupon.nameCoupon}"></h5>
 				  <div class="d-flex justify-content-center m-3">
-					<a th:href="@{'/rewards/' + ${coupon.id}}" class="btn btn-success d-block">view</a>
+					<a th:href="@{'/rewards/' + ${coupon.id} + '/view'}" class="btn btn-success d-block">view</a>
 				  </div>
 				 </div>
 			</div>
