--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -39,7 +39,7 @@
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item"><a class="nav-link active"
 								aria-current="page" href="/home">Home</a></li>
-							<li class="nav-item"><a class="nav-link active" href="#">Requests</a>
+							<li class="nav-item"><a class="nav-link active" href="/request">Requests</a>
 							</li>
 							<li class="nav-item"><a class="nav-link active" href="/recycle">Recycle</a>
 							</li>
