--- a/src/main/resources/templates/coupons/view.html
+++ b/src/main/resources/templates/coupons/view.html
@@ -25,8 +25,10 @@
 						</div>
 					</div>
 					<div class="d-flex justify-content-center p-2 m-1">
-						<a href="#" class="btn btn-success">Swap</a>
+						<a th:href="@{'/rewards/' + ${coupon.id} + '/swap'}" class="btn btn-success">Swap</a>
 					</div>
+
+
 				</div>
 			</div>
 		</div>
