--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -49,7 +49,7 @@
 								aria-expanded="false"> Movements History </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<li><a class="dropdown-item" href="#">Sale History</a></li>
-									<li><a class="dropdown-item" href="#">Purchase History</a></li>
+									<li><a class="dropdown-item" href="/history/purchase">Purchase History</a></li>
 									<li><a class="dropdown-item" href="#">Requests History</a></li>
 								</ul></li>
 							<li class="nav-item"><a class="nav-link active" href="#"
