Gatherers list and view

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -98,14 +98,20 @@
 				<p class="text-white text-center">
 					<strong>Contact Us</strong>
 				</p>
-				<ul style="list-style: none">
-					<li class="d-flex justify-content-center text-white fas fa-envelope"><p class="fw-bold">greencode@hotmail.com</p></li> 
-					<li class="d-flex justify-content-center text-white fas fa-phone-volume"><p class="fw-bold">928996325</p></li>
-				</ul>
+				<div class="row d-flex justify-content-center">
+					<div class="col-4 d-flex align-items-center d-flex justify-content-end text-white"><i class="fas fa-envelope d-flex"></i></div>
+					<div class="col-8"><p class="fw-bold text-white">greencode@hotmail.com</p> </div>
+				</div>
+				<div class="row d-flex justify-content-center">
+					<div class="col-4 d-flex align-items-center d-flex justify-content-end text-white"><i class="fas fa-phone-volume d-flex"></i></div>
+					<div class="col-8"><p class="fw-bold text-white">928996325</p> </div>
+				</div>
+				
 			</div>
 		</div>
-		<p class="text-white d-flex justify-content-center p-3 m-1"><strong>&copy; All rights reserved by Greencode 2021</strong></p>
-	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
+		<hr>
+		<p class="text-white d-flex justify-content-center p-3"><strong>&copy; All rights reserved by Greencode 2021</strong></p>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 	</footer>
 
 	
