--- a/src/main/resources/templates/recycle/gatherers.html
+++ b/src/main/resources/templates/recycle/gatherers.html
@@ -8,15 +8,15 @@
 	<main>
 		<div class="container p-2">
 			<div class="row">
-			  <div class="col-4 p-1" th:each="gatherer : ${gatherers}">
+			  <div class="col-3 p-1" th:each="gatherer : ${gatherers}">
 				<div class="card" style="width: 18rem;">
 					<img th:src="${gatherer.image}" class="img-fluid" >
 					<hr>
 					<div class="card-body">
-					  <h5 class="card-title text-center" th:text="${gatherer.firstName}"></h5>
+					  <h5 class="card-title text-center" th:text="${gatherer.firstName} + ' ' + ${gatherer.lastName}"></h5>
 					 
 					 <div class="button d-flex justify-content-center p-2">
-						<a th:href="@{'/recycle/' + ${gatherer.id} + '/new'}"  type="submit" class="btn btn-primary bg-success">View Profile</a>
+						<a th:href="@{'/recycle/gatherer/' + ${gatherer.id} + '/view'}"  type="submit" class="btn btn-primary bg-success">View Profile</a>
 					 </div> 
 					 			  
 					</div>
