--- a/src/main/resources/templates/recycle/gatherers.html
+++ b/src/main/resources/templates/recycle/gatherers.html
@@ -6,6 +6,11 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
+
+		<div class="d-flex justify-content-evenly p-3 m-3">
+			<a th:href="@{'/recycle/gatherers/Order'}" class="btn btn-secondary">Order by Califications</a> 
+			<a th:href="@{'/recycle/gatherers/byDistrict'}" class="btn btn-secondary">Located in your district</a>
+		</div>
 		<div class="container p-2">
 			<div class="row">
 			  <div class="col-3 p-1" th:each="gatherer : ${gatherers}">
@@ -16,7 +21,7 @@
 					  <h5 class="card-title text-center" th:text="${gatherer.firstName} + ' ' + ${gatherer.lastName}"></h5>
 					 
 					 <div class="button d-flex justify-content-center p-2">
-						<a th:href="@{'/recycle/gatherer/' + ${gatherer.id} + '/view'}"  type="submit" class="btn btn-primary bg-success">View Profile</a>
+						<a th:href="@{'/recycle/gatherers/' + ${gatherer.id} + '/view'}"  type="submit" class="btn btn-primary bg-success">Profile</a>
 					 </div> 
 					 			  
 					</div>
