--- a/src/main/resources/templates/recycle/viewGatherer.html
+++ b/src/main/resources/templates/recycle/viewGatherer.html
@@ -33,8 +33,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="d-flex justify-content-center p-2 m-1">
-						<a th:href="@{'/rewards/' + ${gatherer.id} + '/swap'}" class="btn btn-success">Swap</a>
+					<div class="d-flex justify-content-evenly p-2 m-1">
+						<a th:href="@{'/recycle/' + ${gatherer.id} + '/swap'}" class="btn btn-success">Request</a>
+						<a th:href="@{'/recycle/gatherers'}" class="btn btn-success">Cancel</a>
 					</div>
 
 
