--- a/src/main/resources/templates/recycle/wastes.html
+++ b/src/main/resources/templates/recycle/wastes.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 		<div class="d-flex justify-content-center m-3 p-2">
-			<a th:href="@{'/recycle/gatherer'}"  type="submit" class="btn btn-primary bg-success">Request a gatherer</a>
+			<a th:href="@{'/recycle/gatherers'}"  type="submit" class="btn btn-primary bg-success">Request a gatherer</a>
 		</div>
 	</main>
 	
