--- a/src/main/resources/templates/history/viewPurchase.html
+++ b/src/main/resources/templates/history/viewPurchase.html
@@ -7,24 +7,50 @@
 	<header th:replace="layout/layout :: header"></header>
 	<main>
 
-		<div class="d-flex justify-content-center table-responsive">
-			<div>
-				<table class="table m-3 p-2 table-hover">
-					<thead style="background-color: #4EB918">
-						<tr class="text-center">
-							<th scope="col" >Waste</th>
-							<th scope="col" >Price/Kilo</th>
-							<th scope="col">Weight</th>
-						</tr>
-					</thead>
-					<tbody th:each="waste : ${waste1}">
-						<tr>
-							<th th:text="${waste.name}"></th>
-						</tr>
-					</tbody>
-				</table>
+
+		<div class="d-flex justify-content-center">
+			<div class="row">
+				<div class="col-3 p-1">
+					<div class="card" style="width: 30rem;">
+						<div style="background-color: #4EB918">
+							<h3 class="text-center">Purchase Details</h3>
+						</div>
+						<div class="card-body">
+							<table class="table table-borderless">
+								<thead>
+									<tr class="text-center">
+										<th scope="col">Waste</th>
+										<th scope="col">Price/Kilo</th>
+										<th scope="col">Weight</th>
+									</tr>
+								</thead>
+								<tbody th:each="waste : ${waste1}">
+									<tr>
+										<th th:text="${waste.name}"></th>
+										<td th:text="${waste.category.priceKilo}" class="text-center"></td>
+										<th th:text="${waste.weight}" class="text-center"></th>
+									</tr>
+								</tbody>
+								
+							</table>
+							<div>
+								<h5 class="text-center">
+									Total Price: <span
+										th:text="${optional.totalAmount}"></span>
+								</h5>
+								<h5 class="text-center">
+									Date: <span
+										th:text="${optional.date}"></span>
+								</h5>
+							</div>
+							
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
+
 	</main>
 
 	<footer th:replace="layout/layout :: footer"></footer>
