HistoryControllerSale,salefront,viewsalefront,modificacionlayout

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -48,7 +48,7 @@
 								id="navbarDropdown" role="button" data-bs-toggle="dropdown"
 								aria-expanded="false"> Movements History </a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<li><a class="dropdown-item" href="#">Sale History</a></li>
+									<li><a class="dropdown-item" href="/history/sale">Sale History</a></li>
 									<li><a class="dropdown-item" href="/history/purchase">Purchase History</a></li>
 									<li><a class="dropdown-item" href="#">Requests History</a></li>
 								</ul></li>
