--- a/src/main/resources/templates/history/purchase.html
+++ b/src/main/resources/templates/history/purchase.html
@@ -23,7 +23,7 @@
 							<th th:text="${order.date}"></th>
 							<td th:text="${order.recycler.firstName}"></td>
 							<td><a th:href="@{'/history/purchase/' + ${order.id}+'/view'}" class="btn btn-success" >More details</a></td>
-							<td><a href="#" class="btn btn-success" >Qualify</a></td>
+							<td><a th:href="@{'/rate/recycler/' + ${order.id}}" class="btn btn-success" >Qualify</a></td>
 						</tr>
 					</tbody>
 				</table>
