--- a/src/main/resources/templates/coupons/view.html
+++ b/src/main/resources/templates/coupons/view.html
@@ -24,9 +24,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="d-flex justify-content-center p-2 m-1">
+					<div class="d-flex justify-content-evenly p-2 m-1">
 						<a th:href="@{'/rewards/' + ${coupon.id} + '/swap'}" class="btn btn-success">Swap</a>
+						<a th:href="@{'/rewards'}" class="btn btn-success">Cancel</a>
 					</div>
+					
+
 
 
 				</div>
