--- a/src/main/resources/templates/recycle/gatherers.html
+++ b/src/main/resources/templates/recycle/gatherers.html
@@ -8,7 +8,7 @@
 	<main>
 
 		<div class="d-flex justify-content-evenly p-3 m-3">
-			<a th:href="@{'/recycle/gatherers/Order'}" class="btn btn-secondary">Order by Califications</a> 
+			<a th:href="@{'/recycle/gatherers/best'}" class="btn btn-secondary">Best gatherers</a> 
 			<a th:href="@{'/recycle/gatherers/byDistrict'}" class="btn btn-secondary">Located in your district</a>
 		</div>
 		<div class="container p-2">
