--- a/src/main/resources/templates/recycle/viewGatherer.html
+++ b/src/main/resources/templates/recycle/viewGatherer.html
@@ -34,7 +34,7 @@
 						</div>
 					</div>
 					<div class="d-flex justify-content-evenly p-2 m-1">
-						<a th:href="@{'/recycle/Order'}" class="btn btn-success">Request</a>
+						<a th:href="@{'/recycle/' + ${gatherer.id} + '/Request'}" class="btn btn-success">Request</a>
 						<a th:href="@{'/recycle/gatherers'}" class="btn btn-success">Ignore</a>
 					</div>
 
