--- a/src/main/resources/templates/request/view.html
+++ b/src/main/resources/templates/request/view.html
@@ -6,27 +6,63 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
-		<div class="table-responsive">
-			<table class="table table-hover table-bordered" style="width: 50rem;">
-				<thead style="background-color: #4EB918">
-					<tr class="text-center">
-						<th scope="col">Waste</th>
-						<th scope="col">Price/Kilo</th>
-						<th scope="col">Weight</th>
-					</tr>
-				</thead>
-				<tbody th:each="waste : ${waste1}">
-					<tr>
-						<th th:text="${waste.name}"></th>
-						<td th:text="${waste.category.priceKilo}" class="text-center"></td>
-						<th th:text="${waste.weight}" class="text-center"></th>
-					</tr>
-				</tbody>
-			</table>
-			<a href="#" class="btn btn-success"><i
-				class="fas fa-plus-square"></i>Aceppt</a> <a th:href="@{'/request'}"
-				class="btn btn-success"><i class="fas fa-plus-square"></i>Deny</a>
+
+		<div class="d-flex justify-content-center table-responsive">
+
+			<div>
+				<div class="table-responsive">
+					<table class="table table-hover table-bordered"
+						style="width: 50rem;">
+						<thead style="background-color: #4EB918">
+							<tr class="text-center">
+								<th scope="col">Waste</th>
+								<th scope="col">Price/Kilo</th>
+
+							</tr>
+						</thead>
+						<tbody th:each="wasteOrder : ${wasteOrdersEmpty}">
+							<tr>
+								<th th:text="${wasteOrder.waste.name}"></th>
+								<td th:text="${wasteOrder.price}" class="text-center"></td>
+							</tr>
+						</tbody>
+					</table>
+
+				</div>
+				
+				<section style="padding: 30px;" class="content-center">
+
+					<div class="card mb-5 justify-content-center "
+						style="width: 600px;">
+
+						<div class="col-md-5 justify-content-center p-2">
+							<img th:src="${order.recycler.image}"
+								class="img-fluid img-thumbnail rounded-circle border-success"
+								width="400px;" height="400px;">
+						</div>
+
+						<div class="card-body">
+							<p class="card-text">
+								<strong>First Name:</strong> <span
+									th:text="${order.recycler.district.name}"></span>.
+							</p>
+
+						</div>
+					</div>
+				</section>
+
+			</div>
+			<section style="padding: 30px;" class="justify-content-center">
+				<div>
+					<a th:href="@{'/request/' + ${order.id} +'/update'}" class="btn btn-success"><i
+						class="fas fa-plus-square"></i>Acept</a> <a th:href="@{'/request'}"
+						class="btn btn-success"><i class="fas fa-plus-square"></i>Deny</a>
+
+				</div>
+			</section>
 		</div>
+
+
 	</main>
 	<footer th:replace="layout/layout :: footer"></footer>
 </body>
