--- a/src/main/resources/templates/request/purchase.html
+++ b/src/main/resources/templates/request/purchase.html
@@ -6,8 +6,7 @@
 <body>
 	<header th:replace="layout/layout :: header"></header>
 	<main>
-		<form th:action="@{/request/change}" th:object="${order.wasteOrders}"
-			method="post">
+		
 			<div class="d-flex justify-content-center table-responsive">
 				<div>
 					<div class="table-responsive">
@@ -17,31 +16,32 @@
 								<tr class="text-center">
 									<th scope="col">Waste</th>
 									<th scope="col">Price/Kilo</th>
-									<th scope="col">Weight</th>
 								</tr>
 							</thead>
 							<tbody th:each="wasteOrder : ${wasteOrders}">
 								<tr>
 									<th th:text="${wasteOrder.waste.name}"></th>
 									<td th:text="${wasteOrder.price}" class="text-center"></td>
-									<td><input type="number" th:text="${wasteOrder.weight}"
-										class="form-control" aria-describedby="nameHelp"></td>
+
 								</tr>
 							</tbody>
 						</table>
+
 					</div>
 				</div>
-				<section style="padding: 30px;" class="justify-content-center">
-
-				</section>
-			</div>
-			<div class="d-flex justify-content-center table-responsive my-4">
-			<button type="submit" class="btn btn-success">Update</button>
-		</div>
-			
-		</form>
-		
-	</main>
+				</div>
+			<section>
+			<form th:action="@{/request/change}" th:object="${orderEdit}"
+				method="post">
+				<div class="mb-3">
+					<label for="name" class="form-label">Total Amount</label> <input
+						type="number" th:field="*{totalAmount}" class="form-control"
+						aria-describedby="nameHelp">
+				</div>
+				<button type="submit" class="btn btn-success">Update</button>
+			</form>
+			</section>
+			</main>
 	<footer th:replace="layout/layout :: footer"></footer>
 </body>
 </html>
