--- a/src/main/resources/templates/recycle/gatherers.html
+++ b/src/main/resources/templates/recycle/gatherers.html
@@ -10,6 +10,7 @@
 		<div class="d-flex justify-content-evenly p-3 m-3">
 			<a th:href="@{'/recycle/gatherers/best'}" class="btn btn-secondary">Best gatherers</a> 
 			<a th:href="@{'/recycle/gatherers/byDistrict'}" class="btn btn-secondary">Located in your district</a>
+			<a th:href="@{'/recycle/gatherers'}" class="btn btn-secondary">All gatherers</a>
 		</div>
 		<div class="container p-2">
 			<div class="row">
