--- a/src/main/resources/templates/coupons/list.html
+++ b/src/main/resources/templates/coupons/list.html
@@ -7,6 +7,10 @@
 	<header th:replace="layout/layout :: header"></header>
 	<main>
 		<div class="container p-3">
+			<div class="d-flex justify-content-center fs-2 fw-bold">
+				Your points:  <p th:text=${recycler.point}></p>
+			</div>
+			
 			<div class="row m-2 p-1  d-flex justify-content-center">
 			  <div class="col-3 m-1 p-1" th:each="coupon : ${coupons}">
 				  <div class="d-flex justify-content-center p-2">
@@ -18,6 +22,7 @@
 				  </div>
 				 </div>
 			</div>
+			
 		</div>
 	</main>
 	
