--- a/src/main/resources/templates/request/purchase.html
+++ b/src/main/resources/templates/request/purchase.html
@@ -35,7 +35,9 @@
 								<input type="hidden" th:field="*{id}"> 
 								<input type="hidden" th:field="*{date}">
 								<input type="hidden" th:field="*{status}">
+								<div class="d-flex justify-content-center table-responsive my-4">
 								<input th:field="*{totalAmount}">
+								</div>
 								<div class="d-flex justify-content-center table-responsive my-4">
 									<button type="submit" class="btn btn-success">save</button>
 								</div>  
