--- a/src/main/resources/templates/request/view.html
+++ b/src/main/resources/templates/request/view.html
@@ -13,7 +13,7 @@
 				<div class="table-responsive">
 					<table class="table table-hover table-bordered"
 						style="width: 50rem;">
-						<thead style="background-color: #4EB918">
+						<thead class="bg-success text-white" >
 							<tr class="text-center">
 								<th scope="col">Waste</th>
 								<th scope="col">Price/Kilo</th>
@@ -44,9 +44,20 @@
 						<div class="card-body">
 							<p class="card-text">
 								<strong>First Name:</strong> <span
+									th:text="${order.recycler.firstName}"></span>.
+							</p>
+							<p class="card-text">
+								<strong>LastName:</strong> <span
+									th:text="${order.recycler.lastName}"></span>.
+							</p>
+							<p class="card-text">
+								<strong>District:</strong> <span
 									th:text="${order.recycler.district.name}"></span>.
 							</p>
-
+							<p class="card-text">
+								<strong>Direction:</strong> <span
+									th:text="${order.recycler.address}"></span>.
+							</p>
 						</div>
 					</div>
 				</section>
