--- a/src/main/resources/templates/request/view.html
+++ b/src/main/resources/templates/request/view.html
@@ -31,14 +31,16 @@
 				</div>
 				
 				<section style="padding: 30px;" class="content-center">
-
+					
 					<div class="card mb-5 justify-content-center "
 						style="width: 600px;">
-
-						<div class="col-md-5 justify-content-center p-2">
+					
+						<div class="col-md-5 d-flex justify-content-center p-2">
+							
 							<img th:src="${order.recycler.image}"
 								class="img-fluid img-thumbnail rounded-circle border-success"
 								width="400px;" height="400px;">
+					
 						</div>
 
 						<div class="card-body">
@@ -60,6 +62,7 @@
 							</p>
 						</div>
 					</div>
+					
 				</section>
 
 			</div>
