--- a/src/main/resources/templates/request/list.html
+++ b/src/main/resources/templates/request/list.html
@@ -8,7 +8,7 @@
 	<main>
 	<div class="table-responsive">
 	<table class="table table-hover table-bordered" style="width: 50rem;" >
-				<thead style="background-color: #4EB918">
+				<thead class="bg-success text-white">
 					<tr class="text-center">
 						<th scope="col" style="width: 5rem;">id</th>
 						<th scope="col">Recycler</th>
