--- a/src/main/resources/templates/Recharge/rechargeAccount.html
+++ b/src/main/resources/templates/Recharge/rechargeAccount.html
@@ -39,7 +39,7 @@
 								<p class="card-text">RUC: 20602082891</p>
 								<p class="card-text">Cuenta en soles: 293-003001330643</p>
 								<p class="card-text">Tipo de cuenta: Cuenta Corriente</p>
-								<p class="card-text">Email: comprobante@greencode.com</p>
+								<p class="card-text">Email: comprobantes@greencode.com</p>
 								<p class="card-text">
 									Monto: <input type="text" name="monto" th:field="*{amount}">
 								</p>
